# wiki

./: .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
commands/: index.html
commands/bash/: index.html
commands/bash/awk/: index.html
commands/bash/bang-bang/: index.html
commands/bash/cat/: index.html
commands/bash/chmod/: index.html
commands/bash/curl/: index.html
commands/bash/pipe/: index.html
commands/bash/sed/: index.html
commands/bash/std/: index.html
commands/bash/xargs/: index.html
commands/python/: index.html
commands/python/dis/: index.html
commands/python/gc/: index.html
commands/python/inspect/: index.html
commands/python/interactive/: index.html
docs/: mkdocs.yaml
docs/docs/: index.md
docs/docs/commands/: bang-bang.md  index.md
docs/docs/commands/bash/: awk.md  bang-bang.md  cat.md  chmod.md  curl.md  index.md  pipe.md  sed.md  std.md  xargs.md
docs/docs/commands/python/: dis.md  gc.md  index.md  inspect.md  interactive.md  venv.md
docs/docs/tools/: index.md
docs/docs/workflows/: index.md  interactive-rebase.md
docs/overrides/: main.html
script/: server  sync-readme
search/: search_index.json
tools/: index.html
workflows/: index.html
workflows/interactive-rebase/: index.html
