[tool.poetry]
name = "wiki"
version = "0.1.0"
description = ""
authors = ["Armand Sauzay <35524799+armand-sauzay@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
